<resources>
    <string name="app_name">Smart</string>
    <string name="submit" translatable="false">+</string>
    <!-- Login -->
    <string name="login_name">Full name</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_sign_in">Login</string>
    <string name="login_create_account">Create a new account</string>
    <string name="login_confirm_password">Confirm Password</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_go_login">Go back to Login</string>


    <string name="cancel">Cancel</string>
    <string name="Yes">Yes</string>
    <string name="Are_you_sure">Are you sure?</string>
    <string name="confirm_before_sign_in">An Email has been to you Please, confirm before sign in.</string>
    <string name="please_make_sure_all_the_data">"Please make sure all the data is correct."</string>
    <string name="reset_your_password">"Email has been sent to reset your password."</string>
    <string name="user_is_now_logged_in">"User is now logged in"</string>
    <string name="an_unexpected_error">An Unexpected error ocurred, please try again.</string>
    <string name="logout">Logout</string>
    <string name="click_back">Click back againt to exit this screen</string>
    <string name="list_name_txt">List Name</string>
    <string name="lists_txt">Lists</string>
    <string name="delete_txt">Delete</string>
    <string name="edit_txt">Edit</string>
    <string name="add_products_txt">Add Products.</string>
    <string name="product_txt">Product</string>
    <string name="price_txt">Price</string>
    <string name="description_txt">Description</string>
    <string name="products_txt">Products.</string>
    <string name="list_limit_txt">List limit</string>
</resources>
