<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="myViewModel"
            type="com.anushka.roomdemo.viewmodel.ProductoViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical"
        tools:context=".view.CategoriaActivity" >
        <EditText
            android:id="@+id/categoria_text"
            android:hint="@string/list_name_txt"
            android:text="@={myViewModel.inputNameCategoria}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/login_text_size"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/list_limit"
            android:hint="@string/list_limit_txt"
            android:text="@={myViewModel.inputLimitCategoria}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/login_text_size"
            android:textStyle="bold"
            android:inputType="numberDecimal"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/editar_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="@{()->myViewModel.updateCategoria()}"
            android:text="@string/edit_txt"
            android:background="@color/colorSecundario"
            android:textColor="@color/cardview_light_background"
            android:layout_marginRight="8dp"
            />
        <Button
            android:id="@+id/borrar_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="@{()->myViewModel.deleteCate()}"
            android:layout_height="wrap_content"
            android:text="@string/delete_txt"
            android:background="@color/colorSecundario"
            android:textColor="@color/cardview_light_background"
            android:layout_marginLeft="8dp"
            />
    </LinearLayout>

        <TextView
            android:text="@string/add_products_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/login_text_size"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/nombre_producto_text"
            android:hint="@string/product_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={myViewModel.inputName}"
            android:textSize="@dimen/login_text_size"
            android:textStyle="bold"
            android:inputType="textPersonName"
            />
        <EditText
            android:id="@+id/precio_producto_text"
            android:hint="@string/price_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={myViewModel.inputPrecio}"
            android:textSize="@dimen/login_text_size"
            android:textStyle="bold"
            android:inputType="numberDecimal"
            />
        <EditText
            android:id="@+id/observacion_producto_text"
            android:hint="@string/description_txt"
            android:text="@={myViewModel.inputObservacion}"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textSize="@dimen/login_text_size"
            android:textStyle="bold"
            android:inputType="textMultiLine"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/agregar_producto_button"
                android:layout_width="wrap_content"
                android:layout_gravity="right"
                android:layout_height="wrap_content"
                android:text="@={myViewModel.createProductoButtonText}"
                android:onClick="@{()->myViewModel.createProducto()}"
                android:layout_marginRight="8dp"
                android:background="@color/colorSecundario"
                android:textColor="@color/cardview_light_background"/>
        </LinearLayout>

        <TextView
            android:text="@string/products_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_text_size_xl"
            android:textStyle="bold"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/producto_recyclerView"
            />
    </LinearLayout>
</layout>