<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="myViewModel"
            type="com.anushka.roomdemo.viewmodel.UsuarioViewModel" />
    </data>
<!--<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".view.MainActivity" >

    <EditText
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:text="@={myViewModel.inputName}"
        android:hint="Nombre personal"
        android:inputType="textPersonName"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/username_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:text="@={myViewModel.inputUsername}"
        android:hint="Usuario"
        android:inputType="textPersonName"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@={myViewModel.inputPassword}"
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="textPassword"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save_or_update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@={myViewModel.saveOrUpdateButtonText}"
            android:onClick="@{()->myViewModel.saveOrUpdate()}"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/clear_all_or_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@={myViewModel.clearAllOrDeleteButtonText}"
            android:onClick="@{()->myViewModel.clearAllOrDelete()}"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>
</LinearLayout>-->
    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SignUpActivity">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:layout_marginStart="@dimen/margin_wide"
                android:layout_marginEnd="@dimen/margin_wide"
                android:layout_marginBottom="@dimen/margin_wide"
                android:hint="@string/login_email"
                android:inputType="textPersonName"
                android:text="@={myViewModel.inputName}"
                android:paddingLeft="@dimen/login_edit_text_padding"
                android:paddingRight="@dimen/login_edit_text_padding"
                android:textSize="@dimen/login_text_size"
                app:layout_constraintBottom_toTopOf="@+id/username_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:autofillHints="" />

            <EditText
                android:id="@+id/username_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:layout_marginStart="@dimen/margin_wide"
                android:layout_marginEnd="@dimen/margin_wide"
                android:layout_marginBottom="@dimen/margin_wide"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                android:text="@={myViewModel.inputUsername}"
                android:paddingLeft="@dimen/login_edit_text_padding"
                android:paddingRight="@dimen/login_edit_text_padding"
                android:textSize="@dimen/login_text_size"
                app:layout_constraintBottom_toTopOf="@+id/password_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                android:autofillHints="" />

            <EditText
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:layout_marginStart="@dimen/margin_wide"
                android:layout_marginEnd="@dimen/margin_wide"
                android:layout_marginBottom="@dimen/margin_wide"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:text="@={myViewModel.inputPassword}"
                android:paddingLeft="@dimen/login_edit_text_padding"
                android:paddingRight="@dimen/login_edit_text_padding"
                android:textSize="@dimen/login_text_size"
                app:layout_constraintBottom_toTopOf="@+id/buttonSignUP"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                android:autofillHints="" />

            <Button
                android:id="@+id/buttonSignUP"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_height_xl"
                android:layout_marginStart="@dimen/margin_wide"
                android:layout_marginEnd="@dimen/margin_wide"
                android:layout_marginBottom="160dp"
                android:text="@string/login_sign_up"
                android:textSize="@dimen/login_text_size_xl"
                app:layout_constraintBottom_toTopOf="@+id/buttonGoLogIn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/buttonGoLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_wide"
                android:layout_marginEnd="@dimen/margin_wide"
                android:text="@string/login_go_login"
                android:textSize="@dimen/login_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout >
    </ScrollView>
</layout>